--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
                 <div class="media-body">
                   <h3 class="heading">UI/UX Design</h3>
                   <h3 class="heading">Mobile App Design</h3>
-                  <h3 class="heading">Responsive Design</h3>
+                  <h3 class="heading">HCI Analysis</h3>
+<!--                  <h3 class="heading">Responsive Design</h3>-->
                 </div>
               </div>      
             </div>
@@ -150,7 +151,7 @@
                 <div class="icon mb-3"><span class="icon-gears"></span></div>
                 <div class="media-body">
                   <h3 class="heading">Product Strategy</h3>
-                  <h3 class="heading">Design Sprints</h3>
+                  <h3 class="heading">Agile Sprints</h3>
                   <h3 class="heading">UX Strategy</h3>
                 </div>
               </div>      
@@ -159,9 +160,9 @@
               <div class="media block-6 services p-3 py-4 d-block text-center">
                 <div class="icon mb-3"><span class="icon-code"></span></div>
                 <div class="media-body">
-                  <h3 class="heading">HTML/CSS</h3>
+                  <h3 class="heading">Swift/ARM</h3>
                   <h3 class="heading">Prototyping</h3>
-                  <h3 class="heading">User Testing</h3>
+                  <h3 class="heading">Mobile Testing</h3>
                 </div>
               </div>    
             </div>
