Code: Added links to linkedin and github

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <section class="ftco-section about-section">
         <div class="container">
           <div class="row d-flex" data-scrollax-parent="true">
-            <div class="col-md-4 author-img" style="background-image: url(images/author-1.jpg);" data-scrollax=" properties: { translateY: '-70%'}"></div>
+            <div class="col-md-4 author-img" style="background-image: url(images/person_eddie_standing.jpeg);" data-scrollax=" properties: { translateY: '-70%'}"></div>
             <div class="col-md-2"></div>
             <div class="col-md-6 wrap ftco-animate">
               <div class="about-desc">
@@ -113,8 +113,8 @@
                     <li><a href="#"><span class="icon-twitter"></span></a></li>
 <!--                    <li><a href="#"><span class="icon-facebook"></span></a></li>-->
 <!--                    <li><a href="#"><span class="icon-instagram"></span></a></li>-->
-                    <li><a href="#"><span class="icon-linkedin"></span></a> </li>
-                    <li><a href="#"><span class="icon-github"></span></a> </li>
+                    <li><a href="https://www.linkedin.com/in/eddie-perez-3744061a9/"><span class="icon-linkedin"></span></a> </li>
+                    <li><a href="https://www.github.com/edmfperez"><span class="icon-github"></span></a> </li>
                   </ul>
                   <h5>Contact me here!</h5>
                   <p>Email: <a href="mailto:ed.perez@me.com?subject=I found your website">ed.perez@me.com</a></p>
